--- a/locales/en.json
+++ b/locales/en.json
@@ -39,6 +39,7 @@
     "Cloud management": "Cloud management",
     "Code": "Code",
     "Config": "Config",
+    "Contact your organization administrator to invite you to join": "Contact your organization administrator to invite you to join",
     "DB error": "DB error",
     "Dashboard": "Dashboard",
     "Data source: API call management": "Data source: API call management",
@@ -63,6 +64,7 @@
     "Good morning": "Good morning",
     "Group": "Group",
     "Hangzhou": "Hangzhou",
+    "Haven't join any org": "Haven't join any org",
     "Heyuan": "Heyuan",
     "Hong Kong": "Hong Kong",
     "Huhhot": "Huhhot",
@@ -89,6 +91,7 @@
     "Mon": "Mon",
     "Mumbai": "Mumbai",
     "New version available": "New version available",
+    "No matching organization": "No matching organization",
     "North China {num}": "North China {num}",
     "Note: The precondition to create access management is that the API must first complete the project association and version instance association.": "Note: The precondition to create access management is that the API must first complete the project association and version instance association.",
     "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.": "Note: The {resource} quota you entered has exceeded the remaining resources of the cluster in {workSpace}. Further allocation will preempt resources on a first-used, first-served basis.",
@@ -125,6 +128,7 @@
     "SMS Template Code": "SMS Template Code",
     "SMS signature": "SMS signature",
     "Sat": "Sat",
+    "Search results are empty": "Search results are empty",
     "September": "September",
     "Server address": "Server address",
     "Server port": "Server port",
@@ -171,7 +175,6 @@
     "You can use ClientID and ClientSecret below to access API instance after approval.": "You can use ClientID and ClientSecret below to access API instance after approval.",
     "You do not have enough permissions": "You do not have enough permissions",
     "You have a notification message from the Erda platform": "You have a notification message from the Erda platform",
-    "You haven't joined current organization.": "You haven't joined current organization.",
     "Zhangjiakou": "Zhangjiakou",
     "abnormal": "abnormal",
     "absolute time range": "absolute time range",
