feat: add page title in browser tab

--- a/locales/en.json
+++ b/locales/en.json
@@ -546,6 +546,7 @@
     "keywords": "keywords",
     "label": "label",
     "label tip": "label tip",
+    "land page": "land page",
     "last login time": "last login time",
     "last month": "last month",
     "last week": "last week",
