--- a/locales/zh.json
+++ b/locales/zh.json
@@ -546,6 +546,7 @@
     "keywords": "关键词",
     "label": "标签",
     "label tip": "标签提示",
+    "land page": "着陆页",
     "last login time": "最近登录时间",
     "last month": "上个月",
     "last week": "上周",
