feat(msp): slow call detail
feat(msp): slow call detail

feat(msp): slow call detail

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2377,6 +2377,7 @@
     "operator guide": "Ctrl(Cmd)+Enter: Newline. Enter: Search",
     "overall QPS": "overall QPS",
     "overall latency": "overall latency",
+    "overview": "overview",
     "owned service": "owned service",
     "page": "page",
     "page download": "page download",
@@ -2496,6 +2497,7 @@
     "show": "show",
     "show all connected services in the current environment, as well as the key request indicators of the service in the last hour": "show all connected services in the current environment, as well as the key request indicators of the service in the last hour",
     "skip authentication": "skip authentication",
+    "slow call": "slow call",
     "slow database tracking TOP10": "slow database tracking TOP10",
     "slow loading tracking": "slow loading tracking",
     "slow transaction tracking": "slow transaction tracking",
