--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2377,6 +2377,7 @@
     "operator guide": "Ctrl（Cmd）+ Enter 换行，Enter 查询",
     "overall QPS": "整体QPS",
     "overall latency": "整体延时",
+    "overview": "概览",
     "owned service": "所属服务",
     "page": "页面",
     "page download": "页面下载",
@@ -2496,6 +2497,7 @@
     "show": "显示",
     "show all connected services in the current environment, as well as the key request indicators of the service in the last hour": "展示当前环境下所有接入的服务，以及该服务最近一小时内的关键请求指标",
     "skip authentication": "跳过鉴权",
+    "slow call": "慢调用",
     "slow database tracking TOP10": "慢数据库追踪TOP10",
     "slow loading tracking": "慢加载追踪",
     "slow transaction tracking": "慢事务追踪",
