feat: add land page (#2567)
* feat: add land page

* feat: add land page

* fix: remove useless icon-park import

* feat: remove duplicate land page style

* feat: add i18n

* feat: add page title in browser tab

* fix: add max-height

* feat: add default org logo icon

* fix: use plain string

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1942,12 +1942,15 @@
     "site management": "site management"
   },
   "layout": {
+    "Choose your organization space": "Choose your organization space",
+    "Global optimization": "Global optimization",
+    "Help enterprises to create an agile R & D organization": "Help enterprises to create an agile R & D organization",
+    "Organizational space": "Organizational space",
     "announcement": "announcement",
     "approval": "approval",
     "back to application list": "back to application list",
     "back to dop": "back to DevOps platform",
     "certificate": "certificate",
-    "error page": "error page",
     "join organization": "join organization",
     "logout": "logout",
     "mobile development management": "mobile development management",
@@ -2503,7 +2506,6 @@
     "specified path": "specified path",
     "splice the URL with the prefix removed, and forward the request": "splice the URL with the prefix removed, and forward the request",
     "stack information": "stack information",
-    "start time": "start time",
     "statistics details": "statistics details",
     "status code": "status code",
     "stopped instance": "stopped instance",
