--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1942,12 +1942,15 @@
     "site management": "站点管理"
   },
   "layout": {
+    "Choose your organization space": "选择您的组织空间",
+    "Global optimization": "全局优化",
+    "Help enterprises to create an agile R & D organization": "助力企业打造敏捷型研发组织",
+    "Organizational space": "组织空间",
     "announcement": "公告",
     "approval": "审批管理",
     "back to application list": "返回应用列表",
     "back to dop": "返回 DevOps 平台",
     "certificate": "证书管理",
-    "error page": "错误页面",
     "join organization": "加入组织",
     "logout": "退出登录",
     "mobile development management": "移动开发管理",
@@ -2503,7 +2506,6 @@
     "specified path": "指定路径",
     "splice the URL with the prefix removed, and forward the request": "拼接移除前缀的URL，转发请求",
     "stack information": "堆栈信息",
-    "start time": "起始时间",
     "statistics details": "统计详情",
     "status code": "状态码",
     "stopped instance": "停止实例",
