--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1943,8 +1943,7 @@
   },
   "layout": {
     "Choose your organization space": "选择您的组织空间",
-    "Global optimization": "全局优化",
-    "Help enterprises to create an agile R & D organization": "助力企业打造敏捷型研发组织",
+    "Optimize global performance": "优化全局性能",
     "Organizational space": "组织空间",
     "announcement": "公告",
     "approval": "审批管理",
@@ -1957,6 +1956,7 @@
     "page-not-found": "抱歉，当前页面不存在",
     "personal settings": "个人设置",
     "sorry, you do not have access to this page": "抱歉，您无权访问此页面",
+    "to assist you building agile R&D organizations": "助力企业打造敏捷型研发组织",
     "view doc": "查看文档"
   },
   "msp": {
