--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -691,7 +691,6 @@
     "confirm to delete {name} ?": "confirm to delete {name} ?",
     "confirm to remove user": "confirm to remove user",
     "confirm to remove user in batches": "confirm to remove user in batches",
-    "contact business": "contact business",
     "copy configuration": "copy configuration",
     "custom": "custom",
     "day": "day",
@@ -792,7 +791,6 @@
     "this item is required": "this item is required",
     "to": "to",
     "view": "view",
-    "vip features tips": "VIP user features, please contact Business Opening",
     "yes": "yes",
     "{deleteItem} cannot be restored after deletion. Continue?": "{deleteItem} cannot recover after deletion, confirm deletion?"
   },
@@ -1943,8 +1941,7 @@
   },
   "layout": {
     "Choose your organization space": "Choose your organization space",
-    "Global optimization": "Global optimization",
-    "Help enterprises to create an agile R & D organization": "Help enterprises to create an agile R & D organization",
+    "Optimize global performance": "Optimize global performance",
     "Organizational space": "Organizational space",
     "announcement": "announcement",
     "approval": "approval",
@@ -1957,6 +1954,7 @@
     "page-not-found": "sorry, page not found",
     "personal settings": "settings",
     "sorry, you do not have access to this page": "sorry, you do not have access to this page",
+    "to assist you building agile R&D organizations": "to assist you building agile R&D organizations",
     "view doc": "view doc"
   },
   "msp": {
