feat: hide apply org entry by env variable

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1940,6 +1940,7 @@
     "site management": "site management"
   },
   "layout": {
+    "Apply for organization": "Apply for organization",
     "Choose your organization space": "Choose your organization space",
     "Optimize global performance": "Optimize global performance",
     "Organizational space": "Organizational space",
