--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1940,6 +1940,7 @@
     "site management": "站点管理"
   },
   "layout": {
+    "Apply for organization": "申请组织",
     "Choose your organization space": "选择您的组织空间",
     "Optimize global performance": "优化全局性能",
     "Organizational space": "组织空间",
