--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -810,6 +810,7 @@
     "Are you sure to delete in batches?": "确定批量删除吗？",
     "Are you sure to disinclude {name}": "确认与 {name} 解除包含关系吗",
     "Are you sure to leave, with the error message not saved?": "是否确认离开，离开将不保存错误信息",
+    "Built-in code base": "内置代码库",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "平台中分支绑定环境，该分支代码通过平台 CI/CD 流水线后仅能部署到下面选择的环境中",
     "Business-app-intro": "业务应用主要是指处理某一类业务流程的微服务组合，比如会员管理的业务应用。",
     "Code scanning configuration is mainly divided into rule configuration and code quality access control configuration. When the access control rules are met, it means that the code quality threshold cannot be passed.": "代码扫描配置主要分为规则配置和代码质量门禁配置，其中门禁规则满足的情况下，代表代码质量门槛不能通过",
@@ -1542,6 +1543,7 @@
     "pinned successfully": "置顶成功",
     "pipeline ID": "流水线ID",
     "pipeline configuration": "流水线配置",
+    "pipeline list": "流水线列表",
     "pipeline-run-tip": "当前为历史配置，请切换最新配置后再操作",
     "plan": "版本",
     "plan ID": "计划 ID",
