--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1889,7 +1889,7 @@
     "updater": "updater",
     "upgrade log": "upgrade log",
     "upload files": "upload files",
-    "upload yml file": "upload yml file",
+    "upload zip file": "upload zip file",
     "upload-file-tip": "The file is located in the /.pipeline/container/cms/dice_files directory in the container, the file name is the configured Key, and the file content is the uploaded file",
     "uploading, please do not leave": "uploading, please do not leave",
     "urgent": "urgent",
