--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1889,7 +1889,7 @@
     "updater": "更新人",
     "upgrade log": "升级日志",
     "upload files": "上传文件",
-    "upload yml file": "上传yml文件",
+    "upload zip file": "上传zip文件",
     "upload-file-tip": "文件位于容器内 /.pipeline/container/cms/dice_files目录下, 文件名为配置时的 key 值, 文件内容即为上传的文件",
     "uploading, please do not leave": "上传中，请勿离开",
     "urgent": "紧急",
