feat(msp): process monitor

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2135,6 +2135,7 @@
     "consumer list": "consumer list",
     "consumer management": "consumer list",
     "consumer name": "consumer name",
+    "container monitor": "container monitor",
     "continuous failure": "continuous failure",
     "control strategy": "control strategy",
     "create a endpoint": "create a endpoint",
@@ -2267,6 +2268,7 @@
     "highlight": "highlight",
     "historical downtime": "historical downtime",
     "history available time": "history available time",
+    "host monitor": "host monitor",
     "hot spot analysis": "hot spot analysis",
     "hot statistics": "hot statistics",
     "html completes building": "html completes building",
@@ -2409,7 +2411,7 @@
     "policy name": "policy name",
     "prev": "prev",
     "previous": "previous",
-    "process": "process",
+    "process monitor": "process monitor",
     "project report": "reports",
     "proportion": "proportion",
     "province": "province",
@@ -2454,6 +2456,7 @@
     "router": "router",
     "rule management": "rule management",
     "running instance": "running instance",
+    "runtime monitor": "runtime monitor",
     "satisfied": "satisfied",
     "scene": "scene",
     "script error": "script error",
