feat: msp resource monitor (#2586)
* feat(msp): process monitor

* feat(msp): remoive duplicate key

feat(msp): process monitor

feat(msp): process monitor

feat(msp): process monitor

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2135,6 +2135,7 @@
     "consumer list": "消费者列表",
     "consumer management": "调用方管理",
     "consumer name": "调用方名称",
+    "container monitor": "容器监控",
     "continuous failure": "间隔内连续失败",
     "control strategy": "流控策略",
     "create a endpoint": "创建流量入口",
@@ -2267,6 +2268,7 @@
     "highlight": "高亮显示",
     "historical downtime": "历史宕机时间",
     "history available time": "历史可用时间",
+    "host monitor": "主机监控",
     "hot spot analysis": "热点分析",
     "hot statistics": "热点统计",
     "html completes building": "HTML完成构建",
@@ -2409,7 +2411,6 @@
     "policy name": "策略名称",
     "prev": "上一步",
     "previous": "上一个",
-    "process": "进程分析",
     "project report": "项目报告",
     "proportion": "占比",
     "province": "省份",
@@ -2454,6 +2455,7 @@
     "router": "路由",
     "rule management": "规则管理",
     "running instance": "运行中的实例",
+    "runtime monitor": "运行时监控",
     "satisfied": "满意",
     "scene": "场景",
     "script error": "脚本错误",
