feat: remove public org setting and code

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -505,7 +505,6 @@
     "pod instance": "Pod 实例",
     "port": "端口号",
     "precautions after network closure": "指定的环境开启封网后，所有应用在该环境下部署、发布都需要组织管理员进行审核同意",
-    "private org": "私有组织",
     "process": "进程",
     "process details": "进程详情",
     "process duration": "进程持续时间",
@@ -519,7 +518,6 @@
     "project count": "项目数",
     "project label": "项目标签",
     "provides functions such as project management, code hub, CI/CD, artifact library and a complete R&D process.": "包含项目管理、代码托管、CI/CD和制品库等功能，提供完整的研发流程。",
-    "public org": "公开组织",
     "public read": "公共读",
     "public read and write": "公共读写",
     "publisher info": "发布商信息",
@@ -880,6 +878,7 @@
     "The import and export tasks you submitted have status updates, please check the records": "你提交的导入导出任务有状态更新，请查看记录",
     "The name cannot contain forward and backward slashes. Please enter again.": "名称不能使用正反斜杠，请重新输入",
     "The new data will be lost if closed. Continue?": "关闭后新建数据将丢失，确认关闭 ？",
+    "The organizations I joined": "我加入的组织",
     "The original estimated time for this event is": "此事件的原始预估用时为",
     "The project cannot be restored after deletion. Please enter {name} to confirm.": "项目删除后无法恢复，请输入 {name} 进行确认",
     "The same code can generate different artifacts by pipeline in different environments. Configure the environment here.": "相同代码通过流水线编译后不同环境可以生成不同的制品，编译过程中不同环境差异配置可在此维护",
@@ -1436,7 +1435,6 @@
     "mr-tpl-unit-test": "单元测试 (注意：单元测试必须能够在本地、任意环境可以顺利跑过，请自行 mock 或则规避依赖）",
     "must start with a letter or number": "必须以字母或数字开头",
     "my approval": "我审批的",
-    "my organization": "我的组织",
     "mysql addon account switching, please restart to take effect": "mysql addon 账号切换中，请重启生效",
     "name is required": "名称不能为空",
     "network configuration": "网络配置",
@@ -1642,7 +1640,6 @@
     "protected branch": "分支保护",
     "protected-branch-form-tip": "分支保护开启后，只有应用所有者、应用研发主管才能操作，其他成员只能通过mr提交代码",
     "public application": "公开应用",
-    "public organization": "公开组织",
     "publish documents": "发布文档",
     "push config": "推送配置",
     "push to variable config": "推送到变量配置",
@@ -1940,9 +1937,9 @@
     "site management": "站点管理"
   },
   "layout": {
-    "Apply for organization": "申请组织",
+    "Apply for new organization": "申请新组织",
     "Choose your organization space": "选择您的组织空间",
-    "Optimize global performance": "优化全局性能",
+    "Optimize global performance": "优化全局效能",
     "Organizational space": "组织空间",
     "announcement": "公告",
     "approval": "审批管理",
