feat: add user logout in land page

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1962,6 +1962,7 @@
     "Choose your organization space": "Choose your organization space",
     "Optimize global performance": "Optimize global performance",
     "Organizational space": "Organizational space",
+    "account settings": "account settings",
     "announcement": "announcement",
     "approval": "approval",
     "back to application list": "back to application list",
@@ -1971,7 +1972,6 @@
     "logout": "logout",
     "mobile development management": "mobile development management",
     "page-not-found": "sorry, page not found",
-    "personal settings": "settings",
     "sorry, you do not have access to this page": "sorry, you do not have access to this page",
     "to assist you building agile R&D organizations": "to assist you building agile R&D organizations",
     "view doc": "view doc"
