--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1962,6 +1962,7 @@
     "Choose your organization space": "选择您的组织空间",
     "Optimize global performance": "优化全局效能",
     "Organizational space": "组织空间",
+    "account settings": "账号设置",
     "announcement": "公告",
     "approval": "审批管理",
     "back to application list": "返回应用列表",
@@ -1971,7 +1972,6 @@
     "logout": "退出登录",
     "mobile development management": "移动开发管理",
     "page-not-found": "抱歉，当前页面不存在",
-    "personal settings": "个人设置",
     "sorry, you do not have access to this page": "抱歉，您无权访问此页面",
     "to assist you building agile R&D organizations": "助力企业打造敏捷型研发组织",
     "view doc": "查看文档"
