--- a/locales/zh.json
+++ b/locales/zh.json
@@ -154,6 +154,7 @@
     "The invitation link and verification code have been created": "邀请链接和验证码已创建",
     "The invitation link has been created.": "邀请链接已创建",
     "The name is reserved internally. Please change the name.": "该命名被内部保留，请更改命名",
+    "The project was initialized successfully!": "项目初始化成功!",
     "The {index} item quantity and unit cannot be empty.": "第{index}项数量和单位不得为空",
     "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable": "{type}类型无开启的渠道，是否开启 {name} 渠道？ 点击确定按钮后开启",
     "This page has no data, whether to go": "该页暂无数据，是否前往",
@@ -457,12 +458,14 @@
     "environment": "环境",
     "error": "错误",
     "error detail": "错误详情",
+    "error reason": "错误原因",
     "establish": "创建",
     "establish error": "创建错误",
     "established successfully": "创建成功",
     "execute": "执行",
     "execute detail": "执行明细",
     "executing": "执行中",
+    "execution time": "执行时间",
     "execution times": "已执行次数",
     "exist item which not match operation": "存在不符合操作的项",
     "exit": "退出",
@@ -480,6 +483,7 @@
     "export configuration": "导出配置",
     "export format": "导出格式",
     "export {type}": "导出 {type}",
+    "exported successfully": "导出成功",
     "external": "外部",
     "failed": "失败",
     "failed to create node": "创建节点失败",
@@ -513,6 +517,7 @@
     "import": "导入",
     "import and export records": "导入导出记录",
     "import configuration": "导入配置",
+    "import project": "导入项目",
     "imported successfully": "导入成功",
     "in": "包含",
     "includes letters, numbers and underscores": "包含英文,数字,_",
@@ -668,6 +673,9 @@
     "page loading completed": "网页加载完成",
     "parameter cannot be empty": "参数不能为空",
     "parameter setting": "参数设置",
+    "parsing": "正在解析中",
+    "parsing failed": "解析失败",
+    "parsing succeeded": "解析成功",
     "passed": "已通过",
     "password": "密码",
     "path already exists": "该路径已存在",
@@ -734,6 +742,7 @@
     "project identifier": "项目标识",
     "project name": "项目名称",
     "project setting": "项目设置",
+    "project template": "项目模板",
     "project-app-name-tip": "只能包含小写字母、数字和链接符号 -",
     "project/application/branch": "项目/应用/分支",
     "projects": "项目列表",
@@ -944,6 +953,7 @@
     "upload": "上传",
     "upload image": "上传图片",
     "upload offline package": "上传离线包",
+    "upload project template file": "上传项目模板文件",
     "upload-image-limit {sizeLimit}": "支持格式: jpg/png/gif，不超过 {sizeLimit}M",
     "uploading": "上传中",
     "uploading, please wait a moment": "上传中，请稍等",
@@ -969,6 +979,7 @@
     "version number": "版本号",
     "view comparison results": "查看对比结果",
     "view link": "查看链路",
+    "view results": "查看结果",
     "view {name}": "查看{name}",
     "wait for {approver} to approve": "等待{approver}审批",
     "warning": "警告",
