feat: project pipeline (#2599)
* feat(dop): project pipeline

* feat: code optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -813,6 +813,7 @@
     "Are you sure to delete in batches?": "Are you sure to delete in batch?",
     "Are you sure to disinclude {name}": "Are you sure to disinclude {name}",
     "Are you sure to leave, with the error message not saved?": "Are you sure to leave, with the error message not saved?",
+    "Built-in code base": "Built-in code base",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.",
     "Business-app-intro": "Business applications mainly refer to a combination of microservices that handle certain types of business processes, such as a member management application.",
     "Code scanning configuration is mainly divided into rule configuration and code quality access control configuration. When the access control rules are met, it means that the code quality threshold cannot be passed.": "code scanning configuration is mainly divided into rule configuration and code quality access control configuration, where access control rules meet the situation, on behalf of the code quality threshold cannot pass",
@@ -1093,6 +1094,7 @@
     "code quality": "code quality",
     "code quality access control": "code quality access control",
     "code quality analysis": "code quality analysis",
+    "code source": "code source",
     "code smell": "code smell",
     "code vulnerability": "code vulnerability",
     "code-trigger-CI": "Continuous integration is triggered when the branch code changes",
@@ -1555,6 +1557,7 @@
     "pinned successfully": "pinned successfully",
     "pipeline ID": "pipeline ID",
     "pipeline configuration": "pipeline configuration",
+    "pipeline list": "pipeline list",
     "pipeline-run-tip": "The current configuration is historical, please switch to the latest configuration before operating",
     "plan": "plan",
     "plan ID": "plan ID",
