fix: switch tab reset pageNo

--- a/locales/en.json
+++ b/locales/en.json
@@ -291,7 +291,7 @@
     "cancel order": "cancel order",
     "cancelled by user": "cancelled by user",
     "cannot contain special characters": "cannot contain special characters",
-    "cannot exceed 40 characters": "cannot exceed 40 characters",
+    "cannot exceed 30 characters": "cannot exceed 30 characters",
     "capacity type": "capacity type",
     "cellphone": "cellphone",
     "certificate": "certificate",
@@ -744,6 +744,7 @@
     "project setting": "settings",
     "project template": "project template",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
+    "project-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use - _",
     "project/application/branch": "project/application/branch",
     "projects": "projects",
     "protected branch": "protected branch",
