--- a/locales/zh.json
+++ b/locales/zh.json
@@ -291,7 +291,7 @@
     "cancel order": "取消排序",
     "cancelled by user": "用户取消",
     "cannot contain special characters": "不能包含特殊字符",
-    "cannot exceed 40 characters": "不能超过40个字符",
+    "cannot exceed 30 characters": "不能超过30个字符",
     "capacity type": "容量型",
     "cellphone": "手机",
     "certificate": "证书",
@@ -744,6 +744,7 @@
     "project setting": "项目设置",
     "project template": "项目模板",
     "project-app-name-tip": "只能包含小写字母、数字和链接符号 -",
+    "project-name-tip": "只能包含小写字母、数字和链接符号 - _",
     "project/application/branch": "项目/应用/分支",
     "projects": "项目列表",
     "protected branch": "被保护分支",
