fix(dop): menu text change

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1209,6 +1209,7 @@
     "details": "details",
     "detected circular dependencies": "detected circular dependencies",
     "detection branch": "detection branch",
+    "development deployment": "development deployment",
     "disassociate": "disassociate",
     "disassociated successfully": "disassociated successfully",
     "disk size": "disk size",
