--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1209,6 +1209,7 @@
     "details": "详情信息",
     "detected circular dependencies": "检测到循环依赖",
     "detection branch": "检测分支",
+    "development deployment": "开发部署",
     "disassociate": "解除关联",
     "disassociated successfully": "解除关联成功",
     "disk size": "磁盘大小",
