fix(dop): menu text change

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1209,7 +1209,6 @@
     "details": "details",
     "detected circular dependencies": "detected circular dependencies",
     "detection branch": "detection branch",
-    "development deployment": "development deployment",
     "disassociate": "disassociate",
     "disassociated successfully": "disassociated successfully",
     "disk size": "disk size",
@@ -1362,6 +1361,7 @@
     "input ticket name": "input ticket name",
     "inputs configuration": "inputs configuration",
     "inputs form": "inputs form",
+    "integrated deployment": "integrated deployment",
     "integration testing": "integration testing",
     "interface": "interface",
     "interface document in user center": "interface document in user center",
