--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1209,7 +1209,6 @@
     "details": "详情信息",
     "detected circular dependencies": "检测到循环依赖",
     "detection branch": "检测分支",
-    "development deployment": "开发部署",
     "disassociate": "解除关联",
     "disassociated successfully": "解除关联成功",
     "disk size": "磁盘大小",
@@ -1362,6 +1361,7 @@
     "input ticket name": "请输入工单名称",
     "inputs configuration": "入参表单配置",
     "inputs form": "入参表单",
+    "integrated deployment": "集成部署",
     "integration testing": "集成测试",
     "interface": "接口",
     "interface document in user center": "用户中心接口文档",
