refactor: refactor code

--- a/locales/en.json
+++ b/locales/en.json
@@ -287,11 +287,11 @@
     "can only contain letters, numbers, underscores and hyphens": "can only contain letters, numbers, underscores and hyphens",
     "can only contain numbers": "can only contain numbers",
     "cancel": "cancel",
-    "canceled": "canceled",
     "cancel order": "cancel order",
+    "canceled": "canceled",
     "cancelled by user": "cancelled by user",
     "cannot contain special characters": "cannot contain special characters",
-    "cannot exceed 30 characters": "cannot exceed 30 characters",
+    "cannot exceed {max} characters": "cannot exceed {max} characters",
     "capacity type": "capacity type",
     "cellphone": "cellphone",
     "certificate": "certificate",
@@ -721,6 +721,7 @@
     "please select role for member": "please select role for member",
     "please select version": "please select version",
     "please select {name}": "please select {name}",
+    "please upload the zip file": "please upload the zip file",
     "please wait, the module is loading": "please wait, the module is loading",
     "pod detail": "pod detail",
     "port": "port",
@@ -776,6 +777,7 @@
     "related project": "related project",
     "related project name": "related project name",
     "relative time range": "relative time range",
+    "remark": "remark",
     "remote cancellation": "remote cancellation",
     "remove": "remove",
     "remove relation": "remove relation",
