--- a/locales/zh.json
+++ b/locales/zh.json
@@ -287,11 +287,11 @@
     "can only contain letters, numbers, underscores and hyphens": "只能包含字母数字下划线和中划线",
     "can only contain numbers": "仅允许由数字组成",
     "cancel": "取消",
-    "canceled": "已取消",
     "cancel order": "取消排序",
+    "canceled": "已取消",
     "cancelled by user": "用户取消",
     "cannot contain special characters": "不能包含特殊字符",
-    "cannot exceed 30 characters": "不能超过30个字符",
+    "cannot exceed {max} characters": "不能超过 {max} 个字符",
     "capacity type": "容量型",
     "cellphone": "手机",
     "certificate": "证书",
@@ -721,6 +721,7 @@
     "please select role for member": "请选择成员角色",
     "please select version": "请选择版本",
     "please select {name}": "请选择{name}",
+    "please upload the zip file": "请上传 zip 文件",
     "please wait, the module is loading": "请稍等，模块加载中...",
     "pod detail": "POD详情",
     "port": "端口",
@@ -776,6 +777,7 @@
     "related project": "关联项目",
     "related project name": "关联项目名称",
     "relative time range": "快速时间范围",
+    "remark": "备注",
     "remote cancellation": "远端取消",
     "remove": "移除",
     "remove relation": "解除关联",
