feat: import and export project template (#2600)
* feat: initial import & export project template initially

* feat: import file

* feat: update message tip

* feat: i18n

* fix: switch tab reset pageNo

* refactor: refactor code

* style: update style

* refactor: add copyright

* refactor: update year of copyright from 2022 to 2021

* refactor: refactor code

--- a/locales/en.json
+++ b/locales/en.json
@@ -154,6 +154,7 @@
     "The invitation link and verification code have been created": "The invitation link and verification code have been created",
     "The invitation link has been created.": "The invitation link has been created.",
     "The name is reserved internally. Please change the name.": "The name is reserved internally. Please change the name.",
+    "The project was initialized successfully!": "The project was initialized successfully!",
     "The {index} item quantity and unit cannot be empty.": "The {index} item quantity and unit cannot be empty.",
     "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable": "There is no enabled channel in {type} type. Do you want to enable the {name} channel? Click the ok button to enable",
     "This page has no data, whether to go": "This page has no data, whether to go",
@@ -286,11 +287,11 @@
     "can only contain letters, numbers, underscores and hyphens": "can only contain letters, numbers, underscores and hyphens",
     "can only contain numbers": "can only contain numbers",
     "cancel": "cancel",
-    "canceled": "canceled",
     "cancel order": "cancel order",
+    "canceled": "canceled",
     "cancelled by user": "cancelled by user",
     "cannot contain special characters": "cannot contain special characters",
-    "cannot exceed 40 characters": "cannot exceed 40 characters",
+    "cannot exceed {max} characters": "cannot exceed {max} characters",
     "capacity type": "capacity type",
     "cellphone": "cellphone",
     "certificate": "certificate",
@@ -457,12 +458,14 @@
     "environment": "environment",
     "error": "error",
     "error detail": "error detail",
+    "error reason": "error reason",
     "establish": "establish",
     "establish error": "establish error",
     "established successfully": "established successfully",
     "execute": "execute",
     "execute detail": "execute detail",
     "executing": "executing",
+    "execution time": "execution time",
     "execution times": "execution times",
     "exist item which not match operation": "exist item which not match operation",
     "exit": "exit",
@@ -480,6 +483,7 @@
     "export configuration": "export configuration",
     "export format": "export format",
     "export {type}": "export {type}",
+    "exported successfully": "exported successfully",
     "external": "external",
     "failed": "failed",
     "failed to create node": "failed to create node",
@@ -513,6 +517,7 @@
     "import": "import",
     "import and export records": "import and export records",
     "import configuration": "import configuration",
+    "import project": "import project",
     "imported successfully": "imported successfully",
     "in": "in",
     "includes letters, numbers and underscores": "includes letters, numbers and underscores",
@@ -668,6 +673,9 @@
     "page loading completed": "page loading completed",
     "parameter cannot be empty": "parameter cannot be empty",
     "parameter setting": "parameter setting",
+    "parsing": "parsing",
+    "parsing failed": "parsing failed",
+    "parsing succeeded": "parsing succeeded",
     "passed": "passed",
     "password": "password",
     "path already exists": "path already exists",
@@ -713,6 +721,7 @@
     "please select role for member": "please select role for member",
     "please select version": "please select version",
     "please select {name}": "please select {name}",
+    "please upload the zip file": "please upload the zip file",
     "please wait, the module is loading": "please wait, the module is loading",
     "pod detail": "pod detail",
     "port": "port",
@@ -734,7 +743,9 @@
     "project identifier": "project identifier",
     "project name": "project name",
     "project setting": "settings",
+    "project template": "project template",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
+    "project-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use - _",
     "project/application/branch": "project/application/branch",
     "projects": "projects",
     "protected branch": "protected branch",
@@ -766,6 +777,7 @@
     "related project": "related project",
     "related project name": "related project name",
     "relative time range": "relative time range",
+    "remark": "remark",
     "remote cancellation": "remote cancellation",
     "remove": "remove",
     "remove relation": "remove relation",
@@ -944,6 +956,7 @@
     "upload": "upload",
     "upload image": "upload image",
     "upload offline package": "upload offline package",
+    "upload project template file": "upload project template file",
     "upload-image-limit {sizeLimit}": "support: jpg/png/gif，less than {sizeLimit}M",
     "uploading": "uploading",
     "uploading, please wait a moment": "uploading, please wait a moment",
@@ -969,6 +982,7 @@
     "version number": "version number",
     "view comparison results": "view results",
     "view link": "view link",
+    "view results": "view results",
     "view {name}": "view {name}",
     "wait for {approver} to approve": "wait for {approver} to approve",
     "warning": "warning",
