feat(msp): add trace duration tips

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2546,6 +2546,7 @@
     "system": "系统",
     "tags search": "标签搜索",
     "template": "模板",
+    "the minimum and maximum values need to be filled in at the same time": "最小值、最大值需同时填写",
     "the past 3 months": "过去3个月",
     "the whole page is loaded": "整页加载完成",
     "this item is required": "该项为必填项",
