--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -710,6 +710,7 @@
     "exit-sub-tip {name}": "after exiting the current {name}, you will no longer have the authority to participate in {name} work. If you want to join again, you need to add it by the {name} administrator. Please confirm whether to exit?",
     "expand branch directory selection document": "expand branch directory selection document",
     "expand branch directory selection document or create a new document": "expand branch directory selection document or create a new document",
+    "file type": "file type",
     "file upload": "file upload",
     "filter": "filter",
     "folder": "folder",
@@ -1194,7 +1195,7 @@
     "demand design": "demand design",
     "denied": "denied",
     "deploy global variables": "deploy global variables",
-    "deploy failed applications count / applications count": "deploy failed applications count / applications count",
+    "deploy succeeded applications count / applications count": "deploy succeeded applications count / applications count",
     "deployment center": "deployments",
     "deployment details": "deployment details",
     "deployment environment": "deployment environment",
