--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -710,6 +710,7 @@
     "exit-sub-tip {name}": "退出当前{name}后，将不再有参与{name}工作的权限，如要再次加入需要{name}管理员添加，请确认是否退出？",
     "expand branch directory selection document": "展开分支目录选择文档",
     "expand branch directory selection document or create a new document": "展开分支目录选择文档或新建文档",
+    "file type": "文件类型",
     "file upload": "文件上传",
     "filter": "筛选",
     "folder": "文件夹",
@@ -1194,7 +1195,7 @@
     "demand design": "需求设计",
     "denied": "拒绝",
     "deploy global variables": "部署全局变量",
-    "deploy failed applications count / applications count": "部署失败应用数 / 应用总数",
+    "deploy succeeded applications count / applications count": "部署成功应用数 / 应用总数",
     "deployment center": "部署中心",
     "deployment details": "部署详情页",
     "deployment environment": "部署环境",
@@ -1729,7 +1730,7 @@
     "search by chinese/english name of attribute": "输入属性的中文/英文名搜索",
     "search by id or title": "按id或标题搜索",
     "search by owned project": "通过所在项目搜索",
-    "search by person or product information": "按人员或制品信息搜索",
+    "search by person or product information": "搜索人名或制品名",
     "search for": "搜索",
     "search label under project": "搜索项目下的标签",
     "searchCenter": "搜索中心",
