feat(msp): add trace duration tips (#2612)

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2547,6 +2547,7 @@
     "system": "system",
     "tags search": "tags search",
     "template": "template",
+    "the minimum and maximum values need to be filled in at the same time": "the minimum and maximum values need to be filled in at the same time",
     "the past 3 months": "the past 3 months",
     "the whole page is loaded": "the whole page is loaded",
     "this item is required": "this item is required",
