feat: update project homepage style

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1079,7 +1079,7 @@
     "circulation setting": "流转设置",
     "class catalog": "类目录",
     "click this area to browse and upload": "点击此区域进行浏览上传",
-    "click to add URL path": "单击添加 URL 路径",
+    "click to add URL path": "点击添加 URL",
     "click to edit": "点击即可编辑",
     "click to expand": "点击展开",
     "clone application": "克隆应用",
