fix: fix problems in import project template

--- a/locales/en.json
+++ b/locales/en.json
@@ -626,6 +626,7 @@
     "no more than {size} characters": "no more than {size} characters",
     "no need to execute": "no need to execute",
     "no quota": "no quota",
+    "no results yet": "no results yet",
     "no running runtime": "no running runtime",
     "no template": "no template",
     "node": "Node",
@@ -745,7 +746,6 @@
     "project setting": "settings",
     "project template": "project template",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
-    "project-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use - _",
     "project/application/branch": "project/application/branch",
     "projects": "projects",
     "protected branch": "protected branch",
@@ -763,7 +763,6 @@
     "recover template": "recover template",
     "reference API": "reference API",
     "refresh": "refresh",
-    "refresh data": "refresh data",
     "refuse": "refuse",
     "regexp": "regexp",
     "region": "region",
@@ -985,6 +984,7 @@
     "view results": "view results",
     "view {name}": "view {name}",
     "wait for {approver} to approve": "wait for {approver} to approve",
+    "waiting": "waiting",
     "warning": "warning",
     "week": "week",
     "weeks": "weeks",
@@ -1009,6 +1009,7 @@
     "{num} {type}": "{num} {type}",
     "{size} items / page": "{size} items / page",
     "{specific} instance": "{specific} instance",
+    "{success} apps imported successfully, {fail} apps imported failed": "{success} apps imported successfully, {fail} apps imported failed",
     "{total} item added successfully": "{total} item added successfully",
     "{unreadCount} messages unread": "{unreadCount} messages unread",
     "{week}": "{week}"
