--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -665,6 +665,7 @@
     "add form sub item {name}": "添加表单组{name}子选项",
     "add parameter": "添加参数",
     "advanced filter": "高级过滤器",
+    "all": "全部",
     "batch authorize application": "批量授权应用",
     "batch set the role of member": "批量设置成员角色",
     "can not be all spaces": "不能全为空格",
@@ -808,7 +809,6 @@
     "Addon": "扩展服务",
     "After the use case is selected, the batch operation can be performed.": "选中用例后，才能进行批量操作",
     "An Action with the same name exists.": "存在同名 Action!",
-    "Applications": "应用开发",
     "Applications release list top desc": "应用制品依赖于 pipeline 流水线中 release action 生成。release action 中填写了符合版本号语义的 tag_version 时，使用该 tag_version 作为制品版本名称；或基于 release/* 分支构建制品，且分支名称的基础部分符合版本号语义时，使用分支名称的基本部分生成制品版本名称，如 release/1.1.3 分支构建的制品的版本名称为 1.1.3+20220101150405。",
     "Are you sure to delete in batches?": "确定批量删除吗？",
     "Are you sure to disinclude {name}": "确认与 {name} 解除包含关系吗",
